--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -27,7 +27,9 @@
 	border-top : solid 1px #F3EBEB;
 }
 
-
+#footer-social-row{
+	margin: 20px;
+}
 
 #twitter-footer{
 	background-image: url("../images/twitter_line_hover_blue_theme.png");
