--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -28,6 +28,11 @@
       margin: 0 auto;
     }
 
+    .social-media{
+      margin: 0 auto;
+      text-align: center;
+     }
+
     #search-bar{
       text-align: center;
     }
@@ -54,19 +59,20 @@
     #cd-baby-logo{width: 100px;}
     
     .show-nav #site-canvas {
-      -webkit-transform: translateX(250px);
-      transform: translateX(250px);
-      -webkit-transform: translate3d(250px, 0, 0);
-      transform: translate3d(250px, 0, 0);
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%);
+      -webkit-transform: translate3d(100%, 0, 0);
+      transform: translate3d(100%, 0, 0);
     }
 
-
     #site-nav {
-      width: 250px;
+      width: 100%;
       height: 100%;
       position: absolute;
       top: 0;
-      left: -250px;
+      left: -100%;
+      padding: 0px;
+      margin: 0px;
     }
 
     .nav-item a {
@@ -100,6 +106,9 @@
     .submenu li a{font-size: 16px;}
 
     #blog-archive h1{font-size: 40px;} 
+    .blog-post h1{
+      font-size: 32px;
+    }
 
     #about-profile{margin: 30px 0 0 0; }
 
@@ -108,7 +117,6 @@
     .text-content{margin:10px 50px;}
 
     #copyright p{font-size:17px }
-
 }
 
 @media only screen 
